k8s/infra/reloader/netpol.yaml
# deny all egress traffic by default
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Egress
---
# allow dns queries to coredns
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
  # Allow access to the Kubernetes API server
  - to:
      - ipBlock:
          cidr: 192.168.1.10/32   # due to k3s this is the node's IP and not the kube-apiserver pod
    ports:
      - protocol: TCP
        port: 6443
